tests/samples/negative/visibility/private_type_import.ax
module private_type_import;

import samplelib.visibility;

fn main() -> i32 {
    let value: HiddenInt = 1;
    return value;
}
